--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
                 <div class="nav-two">
                     <li>
                         <ul>
-                            <a href="/home.html">Home</a>
+                            <a href="/index.html">Home</a>
                         </ul>
                         <ul>
                             <a href="">Groceries<i class="fa-solid fa-caret-down"></i></a>
