--- a/registration.html
+++ b/registration.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 
-2<body>
+<body>
     <div>
         <div class="nav-one">
             <p>SALE UP TO 70% OFF. USE CODE "SALE70%". <span class="span-one"> SHOP NOW</span></p>
@@ -74,23 +74,17 @@
         <div class="body"> <br> <br>
             <div class="registration">
                 <h3> PROFILE INFORMATION</h3>
-                <input type="email" name="" id="" placeholder="First Name...">
-                <input type="password" name="" id="" placeholder="Last Name...">
+                <input type="email" name="" id="" placeholder=" First Name...">
+                <input type="password" name="" id="" placeholder=" Last Name...">
 
 <!-- <div class="check"> -->
-    <input type="checkbox" name="checkbox" class="check"  >
-    <label class="sub-txt" for="checkbox" >Subscribe to Newsletter</label>
 
 <!-- </div> -->
 
                 <h3>LOGIN INFORMATION</h3>
-                <input type="email" name="" id="" placeholder="Email Address">
-                <input type="password" name="" id="" placeholder="Password">
-                <input type="password" name="" id="" placeholder="Password Confirmation">
-                <input type="checkbox" name="" id="check">
-                <label for="checkbox" class="sub-txt">
-                    I accept the terms and conditions
-                </label>
+                <input type="email" name="" id="" placeholder=" Email Address">
+                <input type="password" name="" id="" placeholder=" Password">
+                <input type="password" name="" id="" placeholder=" Password Confirmation">
                
         
                 <button>Register</button>
